samples/_failures_safe/1761400702_58a70c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e68bbba.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_0e68bbba.c:151:20: error: missing terminating " character
  151 |             printf("Vertex %d:
      |                    ^~~~~~~~~~~
./samples/SAFE/__tmp_0e68bbba.c:151:13: error: expected expression at end of input
  151 |             printf("Vertex %d:
      |             ^~~~~~
./samples/SAFE/__tmp_0e68bbba.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e68bbba.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e68bbba.c:151:13: error: expected declaration or statement at end of input
